--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "^14.2.5",
     "react": "^18.3.1",
